process/scss/partials/_app.scss
/**  Basic Page CSS **/
body, p {
  font-family: 'Rokkitt', serif;
  font-weight: 300;
  font-size: 2em;
  overflow-x: hidden;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: 600;
  font-size: 3rem;
  margin: 0;
}

/**  Header Navigation **/

header .navbar {
  padding: 0;
  transition: all .5s ease-out;
}

header .navbar-default {
  background-color: gray;
  border: none;
}

header .navbar-default .navbar-nav a {
  color: whitesmoke;
  padding: 5px 8px;
}

header .navbar-default .navbar-nav a:hover {
  color: #ad2e14;
}

ul.nav {
  margin: 25px 0;
}

.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
  color: whitesmoke;
  background-color: #ad2e14;
}

header .navbar-default .navbar-nav .active a {
  font-weight: 600;
  color: #ad2e14;
  background: transparent;
  //border: 1px solid rgba(255, 255, 255, .3);
  border-bottom: 4px solid #ad2e14;
}

header .navbar-default .navbar-nav .active a:hover {
  color: whitesmokesmoke;
  background: transparent;
  text-shadow: none;
}

.smaller {
  font-size: smaller;
}

.smallest {
  font-size: x-small;
}

.coral {
  color: coral;
}

.black {
  color: black !important;
}


/**  Navbar Brand **/

header {
  .navbar-brand {
    background: url(../images/logo.png);
    background-repeat: no-repeat;
    background-position: bottom left;
    background-size: 28%;
    height: auto;
    padding: 9px;

    h1 {
      color: whitesmoke;
      margin: 0;
      font-size: 1.8em;
      font-weight: 300;
      padding-left: 105px;
      padding-bottom: 5px;
      margin-top: 5px;
    }

    span.subhead {
      display: block;
      font-size: .6em;
      font-weight: 300;
    }
  }

  .navbar-toggle {
    background-color: #ad2e14;
  }

  .navbar-default .navbar-toggle .icon-bar {
    background-color: whitesmoke;
  }

  .inbody {
    background: rgba(71, 90, 97, .8);
  }

  .navbar {
    &.inbody {
      padding-top: 0;
      padding-bottom: 0;

      .navbar-nav {
        margin: 15px auto;
      }

      .navbar-brand {
        background-size: 36px;
        background-position: bottom left;
        padding-bottom: 0;
        margin-left: 10px;

        h1 {
          font-size: 1.1em;
          padding-left: 38px;
        }

        span.subhead {
          display: none;
        }

      }

    }
  }


}

@media only screen and (max-width: 768px) {
  header .navbar-collapse.in {
    background-color: rgba(0, 0, 0, .5);
  }
}

/**  Carousel Fade **/
.carousel {
  height: 100vh;
  background-color: #1B7998;

  &.fade {
    opacity: 1;

    .item {
      transition: opacity ease-out .7s;
      left: 0;
      opacity: 0;
      top: 0;
      position: absolute;
      width: 100%;
      display: block;
      background-size: 100% 100%;
      background-repeat: no-repeat;
      background-position: center center;
      background-attachment: fixed;
      width: 100%;
      height: 100vh;

      &:first-child {
        top: auto;
        opacity: 0;
        position: relative;
      }
    }

    .item.active {
      opacity: 1;
    }
  }

}

.carousel-control {
  opacity: 0;

  &.right,
  &.left {
    background-image: none;
  }
}

/**  Page **/
.page {
  padding: 40px 0;
  font-size: 1.7rem;
  line-height: 1.2;
  width: 100vw;
}

.page-headline {
  font-size: 2.5em;
  font-weight: 300;
  text-align: center;
  margin-bottom: 20px;
}

.page-description {
  font-size: 1.1em;
  line-height: 120%;
  font-weight: 300;
  text-align: center;
  margin-bottom: 20px;
}

.page .col-xs-1, #dashboard .col-sm-1, #dashboard .col-md-1, #dashboard .col-lg-1, #dashboard .col-xs-2, #dashboard .col-sm-2, #dashboard .col-md-2, #dashboard .col-lg-2, #dashboard .col-xs-3, #dashboard .col-sm-3, #dashboard .col-md-3, #dashboard .col-lg-3, #dashboard .col-xs-4, #dashboard .col-sm-4, #dashboard .col-md-4, #dashboard .col-lg-4, #dashboard .col-xs-5, #dashboard .col-sm-5, #dashboard .col-md-5, #dashboard .col-lg-5, #dashboard .col-xs-6, #dashboard .col-sm-6, #dashboard .col-md-6, #dashboard .col-lg-6, #dashboard .col-xs-7, #dashboard .col-sm-7, #dashboard .col-md-7, #dashboard .col-lg-7, #dashboard .col-xs-8, #dashboard .col-sm-8, #dashboard .col-md-8, #dashboard .col-lg-8, #dashboard .col-xs-9, #dashboard .col-sm-9, #dashboard .col-md-9, #dashboard .col-lg-9, #dashboard .col-xs-10, #dashboard .col-sm-10, #dashboard .col-md-10, #dashboard .col-lg-10, #dashboard .col-xs-11, #dashboard .col-sm-11, #dashboard .col-md-11, #dashboard .col-lg-11, #dashboard .col-xs-12, #dashboard .col-sm-12, #dashboard .col-md-12, #dashboard .col-lg-12 {
  padding-right: 5px;
  padding-left: 5px;
}

#dashboard {
  background-color: #000000;

  #dashboard-content {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
  }

  .page-headline {
    color: #ad2e14;
  }

  p {
    color: #ad2e14;
  }

  img {
    width: 100%;
    margin-bottom: 10px;
    cursor: pointer;
  }
}

#projects {
  line-height: 100%;
  height: 90vh;
  height: 90vh;
  background: whitesmoke;

  .page-headline {
    color: hsl(10, 79%, 38%);
  }
  .scrollbar
  {
    margin-left: 30px;
    float: left;
    height: 55vh;
    background: #F5F5F5;
    overflow-y: scroll;
    margin-bottom: 25px;
  }
  #style-3::-webkit-scrollbar-track
  {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
    background-color: #F5F5F5;
  }

  #style-3::-webkit-scrollbar
  {
    width: 6px;
    background-color: #F5F5F5;
  }

  #style-3::-webkit-scrollbar-thumb
  {
    background-color: #000000;
  }

  .force-overflow
  {
    min-height: 450px;
  }

  .appointment {
    border-bottom: 1px solid hsl(38, 24%, 67%);
    cursor: pointer;
    margin-top: 0;
    padding: 15px 0 15px 15px;

    &:hover {
      background: hsl(38, 24%, 77%);
    }
  }

  .appointment-img {
    width: 100px;
  }

  .appointment-heading {
    font-size: 1.6em;
    color: hsl(10, 79%, 28%);
  }

  .project-codetype {
    color: hsla(10, 100%, 28%, .7);
    font-size: .6em;
    font-weight: 600;
  }

  .appointment-owner-title {
    font-weight: 600;
    color: rgba(0, 0, 0, .6);
  }

  .appointment-owner-name {
    font-weight: 300;
    color: rgba(0, 0, 0, .5);
    font-size: 1.1em;
    font-style: italic;
  }

  .appointment-reason {
    margin-top: 5px;
    font-size: .85em;
    font-style: italic;
  }
}

.modal {
  height: 90vh;
  width: auto;
  margin: auto;

  .modal-dialog {
    width: 90%;
    margin: 30px auto;
  }

  .modal-body {
    padding: 0;
  }

  .modal-name {
    color: hsl(10, 79%, 48%);
  }

  .modal-codetype {
    font-size: .7em;
  }

  .modal-content img {
    width: 100%;
  }

  .modal-content {
    p, span {
      font-size: .8em;
      padding: 15px;
    }
  }

  .modal-link {

  }
}


.list-group-item img {
  width: 100px;
}


.loader {
  background-color: rgba(27, 121, 152, .9);
  position: fixed;
  display: flex;
  width: 100%;
  height: 100vh;
  z-index: 100;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.loader-text {
  font-size: 1em;
  color: whitesmoke;
  text-shadow: 1px 1px 4px black;
}

.progress {
  width: 40%;
  max-width: 200px;
}
a.btn{
  padding: 1vh 2vh;
  margin-bottom: 1vh;
  border-radius: 20px;
  background-color:#337ab7;
  color: whitesmoke;
  &:hover, &:focus{
    text-decoration: none!important;
    background-color: whitesmoke;
    color: #337ab7;
  }
}
.row.flexed{
  display:flex;
  items: space-between;
}

.reloadbtn {
  width: 22px;
  height: 22px;
  cursor: pointer;
}

.reloadbtn-lg {
  width: 50px;
  height: 50px;
  display: none;
  float: right;
  padding: 9px 10px 9px 0;
  cursor: pointer;
}

@media screen and (max-width: 768px) {
  .reloadbtn {
    display: none;
  }

  .reloadbtn-lg {
    display: inline;
  }
}

#contact {
  text-align: center;
}

